@@ -111,6 +111,9 @@ extern int STCparse(void *context);
 - (void)emitPushNil;
 - (void)emitPushTrue;
 - (void)emitPushFalse;
+- (void)emitStoreReceiverVariable:(NSUInteger)index;
+- (void)emitStoreTemporary:(NSUInteger)index;
+- (void)emitStoreVariable:(NSUInteger)index;
 
 - (void)fixupLongJumpAt:(NSUInteger)index with:(short)offset;
 - (NSUInteger)currentBytecode;
@@ -886,23 +889,17 @@ extern int STCparse(void *context);
     {
         for(i = 0; i<count; i++)
         {
-            [self emitDuplicateStackTop];
-        }
-        
-        for(i = 0; i<count; i++)
-        {
             varName = [array objectAtIndex:i];
 
             index = [self indexOfTemporaryVariable:varName];
             if(index != NSNotFound)
             {
-                [self emitPopAndStoreTemporary:index];
+                [self emitStoreTemporary:index];
                 continue;
             }
             if( [varName isEqual:@"self"] )
             {
                 NSLog(@"Warning: trying to store to self (ignoring)");
-                [self emitPopStack];
                 continue;
             }
             else
@@ -910,11 +907,11 @@ extern int STCparse(void *context);
                 index = [self indexOfNamedReference:varName];
                 if([self isReceiverVariable:varName])
                 {
-                    [self emitPopAndStoreReceiverVariable:index];
+                    [self emitStoreReceiverVariable:index];
                 }
                 else
                 {
-                    [self emitPopAndStoreVariable:index];
+                    [self emitStoreVariable:index];
                 }
             }
         }
@@ -1254,6 +1251,33 @@ extern int STCparse(void *context);
                 (unsigned long)index, (unsigned long)(index + offset));
 
     [byteCodes replaceBytesInRange:NSMakeRange(index+1,2) withBytes:bytes];
+}
+- (void)emitStoreTemporary:(NSUInteger)index
+{
+    NSDebugLLog(@"STCompiler-emit",
+                @"#%04lx store temp %lu (%@)",
+                (unsigned long)bcpos,(unsigned long)index,
+                [tempVars objectAtIndex:index]);
+
+    EMIT_DOUBLE(STStoreTempBytecode,index);
+}
+- (void)emitStoreVariable:(NSUInteger)index
+{
+    NSDebugLLog(@"STCompiler-emit",
+                @"#%04lx store ext variable %lu (%@)",
+                (unsigned long)bcpos,(unsigned long)index,
+                [namedReferences objectAtIndex:index]);
+
+    EMIT_DOUBLE(STStoreExternBytecode,index);
+}
+- (void)emitStoreReceiverVariable:(NSUInteger)index
+{
+    NSDebugLLog(@"STCompiler-emit",
+                @"#%04lx store rec variable %lu (%@)",
+                (unsigned long)bcpos,(unsigned long)index,
+                [namedReferences objectAtIndex:index]);
+
+    EMIT_DOUBLE(STStoreRecVarBytecode,index);
 }
 - (NSUInteger)currentBytecode
 {
