@@ -1,5 +1,13 @@
 2022-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+    * STBytecodes.h:
+    * STBytecodes.m (initNamesArray, STDissasembleBytecode):
+    * STBytecodeInterpreter.m (dispatchBytecode:):
+    * STCompiler.m (compileExpression:, emitStoreTemporary: emitStoreVariable:,
+        -emitStoreReceiverVariable:):
+    Add bytecodes that save the top of the stack without popping. These
+    are used for a better translation of assignments.
+
     * STCompiler.m (emitPushLiteral, emitSendSelector:argCount:):
     Remove code that incorrectly was requesting extra stack space.
 
